k8s/devops-world-skaffold01-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-world-skaffold01
  namespace: jx
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: devops-world-skaffold01
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
